Closed
Bug 217026
Opened 22 years ago
Closed 22 years ago
-turbo (quick launch) broken since 8/18
Categories
(Firefox :: General, defect)
Tracking
()
VERIFIED
FIXED
Firebird0.7
People
(Reporter: mrtech, Assigned: bugzilla)
References
Details
Attachments
(2 files)
|
681 bytes,
patch
|
Details | Diff | Splinter Review | |
|
1.62 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5b) Gecko/20030822 Mozilla Firebird/0.6.1+
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5b) Gecko/20030822 Mozilla Firebird/0.6.1+
I use the -turbo mode to run Firebird and since the 8/18 build it's been broken.
Reproducible: Always
Steps to Reproduce:
1. run firebird with -turbo option
2.
3.
Actual Results:
- Program runs
- Shows icon in system tray
- Just hangs
running again will not launch and the Exit Firebird option is disabled on system
tray right-click, have to kill process running to get it closed.
Expected Results:
Runs in system tray and allows browser to open on next launch.
Comment 1•22 years ago
|
||
Confirmed. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5b)
Gecko/20030822 Mozilla Firebird/0.6.1+.
Comment 2•22 years ago
|
||
Turbo-mode is not supported on Firebird and is a leftover of old mozilla code,
which is likely to be removed in the future. Breakage is to be expected.
-> WONTFIX
Status: UNCONFIRMED → RESOLVED
Closed: 22 years ago
Resolution: --- → WONTFIX
That's really a shame, I have grown to like the speed and functionality in using
Firebird and would really hope that this decision gets reconsidered. I'm not
really sure what is saved by disabling/removing this, but the benefits are
definitely another reason why I had switch to Mozilla and then to Firebird.
Again, I plead that you reconsider removing this, thanks.
Updated•22 years ago
|
Summary: Running in -turbo mode broken since 8/18 build → -turbo (quick launch) broken since 8/18
Comment 4•22 years ago
|
||
I'd also like to know the reasoning behind this decision; Firebird takes about
2s to start on my machine, and Moz with quicklaunch takes less than 0.5s. I'm
sure there's a good reason; it'd just be nice to know what it is.
Even if this could be make modular or an extension, please, please please
reconsider removing this. I'm not a C programmer, but if this could be made
into an extension or something I would be completely in someone's debt, this
feature rocks for both Moz and Firebird, thanks.
Comment 6•22 years ago
|
||
*** Bug 218053 has been marked as a duplicate of this bug. ***
Comment 7•22 years ago
|
||
*** Bug 219894 has been marked as a duplicate of this bug. ***
If it is REALLY going to be removed, please remove the -turbo option, so users
see that quicklaunch is intentionally no longer available, rather than leaving
it in a broken state that appears unintentional (from which you can't even quit
without killing the mozillafirebird.exe process).
Comment 9•22 years ago
|
||
Chris Thomas, Turbo was never supported. Those few people that enabled a
command-line feature from SeaMonkey in Firebird did so at their own risk.
Whether or not it is supported, it should not get into a state from which you
cannot quit. This patch is a quick hack to ignore -turbo, /turbo, -server, and
/server, until someone can remove the rest of the broken and unsupported code
(which now just adds bloat).
Oops. Apply that to toolkit/xre/nsAppRunner.cpp.
Comment 12•22 years ago
|
||
Reopening so ben can evaluate the patch for 0.7. May be re-resolved as wontfix.
Status: RESOLVED → UNCONFIRMED
Resolution: WONTFIX → ---
Target Milestone: --- → Firebird0.7
| Reporter | ||
Comment 13•22 years ago
|
||
I really do beg to differ on the "just adds bloat" comment, on several systems
that I use (yes slightly older ones with a good amount of memory), this feature
worked GREAT. It's still a shame that it has to come down to this, but oh well.
Comment 15•22 years ago
|
||
Fixed, branch and trunk.
Status: NEW → RESOLVED
Closed: 22 years ago → 22 years ago
Resolution: --- → FIXED
It looks like the files required to make a less quick-and-dirty fix
(specifically nsNativeAppSupportWin.cpp) were unforked > 1 year ago, so a better
fix removing all quicklaunch-related code most likely isn't possible unless
Mozilla also removes quicklaunch.
Comment 18•22 years ago
|
||
*** Bug 232700 has been marked as a duplicate of this bug. ***
Comment 19•21 years ago
|
||
*** Bug 245437 has been marked as a duplicate of this bug. ***
Comment 20•21 years ago
|
||
*** Bug 280604 has been marked as a duplicate of this bug. ***
Comment 21•21 years ago
|
||
*** Bug 264754 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 22•21 years ago
|
||
(In reply to comment #16)
> It looks like the files required to make a less quick-and-dirty fix
> (specifically nsNativeAppSupportWin.cpp) were unforked > 1 year ago, so a better
> fix removing all quicklaunch-related code most likely isn't possible unless
> Mozilla also removes quicklaunch.
Ok, here I am again spamming the world. Since the Moz Suite is no longer being
fully supported, I find myself switch a few folks to FF/TB and on Athlon 1000
systems with a gig of memory the startup time for FF is horrible. Since the
code apparently is still bloating around based on the CT's comments, is there
anyway that FF can regain this feature? Even if it's in a unsupported fashion,
it would make FF load in blistering speeds on newer systems and very good on
older ones. I've tried the Minimize to Try extension with very mixed results
and this feature would really help.
Just HAD to see if this could be revived or revisited, thanks and sry for the spam.
Comment 23•20 years ago
|
||
*** Bug 328976 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•