Bug 217026 - turbo is not supported in Mozilla Firebird. exit with an error. Patch by chris Thomas.